<resources>
    <string name="app_name">Akuafo</string>

    <string name="nav_menu_ads">Ads and Information</string>
    <string name="nav_menu_cat">Categories</string>
    <string name="nav_menu_location">Location</string>
    <string name="nav_menu_user">User</string>
    <string name="nav_menu_login">Login</string>
    <string name="nav_menu_signup">Sign Up</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_app">App</string>
    <string name="nav_menu_about">About Akuafo</string>

    <string name="close">close</string>
    <string name="open">open</string>

    <string name="cat_all">All</string>
    <string name="cat_fruits_and_vegetables">Fruits and Vegetables</string>
    <string name="cat_grains_and_beans">Grains and Beans</string>
    <string name="cat_roots_and_tubers">Roots and Tubers</string>
    <string name="cat_livestock">Livestock</string>
    <string name="cat_dairy">Dairy</string>
    <string name="cat_spices_and_herbs">Spices and Herbs</string>
    <string name="cat_oils_and_butter">Oils and Butter</string>


    <string name="location_accra">Greater Accra Region</string>
    <string name="location_ashanti">Ashanti Region</string>
    <string name="location_eastern">Eastern Region</string>
    <string name="location_western">Western Region</string>
    <string name="location_volta">Volta Region</string>
    <string name="location_central">Central Region</string>
    <string name="location_brong_ahafo">Brong Ahafo Region</string>
    <string name="location_northern">Northern Region</string>
    <string name="location_upper_east">Upper East Region</string>
    <string name="location_upper_west">Upper West Region</string>
    <string name="location_all">All</string>

    <string name="location_header1">Want to see ads from a specific location?</string>
    <string name="location_header2">Select the Region you want</string>

    <string name="sign_up_name">Name</string>
    <string name="pass">********</string>
    <string name="sign_up_email">Email</string>
    <string name="email_hint">mail@example.com</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_password_again">Password Again</string>
    <string name="sign_up_button">SIgn Up</string>
    <string name="sign_up__account_already">Already have an account?</string>
    <string name="sign_up__login">Log In</string>
    <string name="login_forgot_password">Forgot uour password?</string>
    <string name="login_no_account">Don\'t have account?</string>

    <string name="user_type">Type</string>

    <string-array name="spinner_sign_up">
        <item>Farmer</item>
        <item>Truck Driver</item>
    </string-array>

    <string-array name="spinner_login">
        <item>Farmer</item>
        <item>Truck Driver</item>
        <item>Extension</item>
    </string-array>

    <string-array name="spinner_location">
        <item>Greater Accra Region</item>
        <item>Eastern Region</item>
        <item>Central Region</item>
        <item>Western Region</item>
        <item>Volta Region</item>
        <item>Ashanti Region</item>
        <item>Brong Ahafo Region</item>
        <item>Northern Region</item>
        <item>Upper East Region</item>
        <item>Upper West Region</item>
    </string-array>

    <string-array name="spinner_category">
        <item>Fruits and Vegetables</item>
        <item>Grains and Beans</item>
        <item>Roots and Tubers</item>
        <item>Livestock</item>
        <item>Dairy</item>
        <item>cat_spices_and_herbs</item>
        <item>Oils and Butter</item>
    </string-array>

    <string-array name="spinner_verified_by">
        <item>Farmer</item>
        <item>Truck Driver</item>
    </string-array>

    <string name="post_ads_caption">Caption</string>
    <string name="post_ads_category">Category</string>
    <string name="post_ads_price">Price</string>
    <string name="post_ads_phone_number">Phone</string>
    <string name="post_ads_phone_number_hint">0240000000</string>
    <string name="post_ads_description">Description</string>
    <string name="post_ads_location">Location</string>
    <string name="post_ads_quantity">Quantity</string>
    <string name="post_ads_verified_by">Verified By</string>
    <string name="post_ads_button_post">POST</string>
    <string name="post_ads_button_next">NEXT</string>


    <string name="post_trucks_model">Truck Model</string>
    <string name="post_trucks_model_hint">Model</string>
    <string name="post_trucks_size">Size</string>
    <string name="post_trucks_reg_no">Registration Number</string>
    <string name="post_trucks_reg_no_hint">GR 0000 16</string>
    <string name="post_trucks_button">POST</string>

    <string-array name="spinner_truck_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="post_extension_heading">Heading</string>
    <string name="post_extension_info">ExtensionInformation</string>
    <string name="post_extension_info_hint">Information here</string>
    <string name="post_extension_button">POST</string>

    <string name="list_view_ads_caption">Caption</string>
    <string name="list_view_ads_price">GhS 500</string>
    <string name="list_view_ads_sender">Farmer</string>
    <string name="list_view_ads_date">22/01/2017</string>
    <string name="list_view_ads_verified_by">Extension</string>


    <string name="list_view_trucks_sender">Truck Driver</string>
    <string name="list_view_trucks_size">Large</string>
    <string name="list_view_trucks_model">Model</string>
    <string name="list_view_trucks_date">22/01/2017</string>


    <string name="sent_by">Sent By</string>
    <string name="call">CALL</string>
    <string name="date">Date</string>


    <string name="list_view_extension_heading">Heading</string>
    <string name="list_view_extension_sender">Extension Officer</string>
    <string name="list_view_extension_info">Extension info is here</string>


</resources>
