<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:text="@string/sign_up_email"
                android:textColor="@color/secondary_text"/>


            <EditText
                android:id="@+id/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:ellipsize="end"
                android:hint="@string/email_hint"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:text="@string/sign_up_password"
                android:textColor="@color/secondary_text"/>

            <EditText
                android:id="@+id/edit_text_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLines="1"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:text="@string/user_type"
                android:textColor="@color/secondary_text"/>

            <Spinner
                android:id="@+id/spinner_login_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:spinnerMode="dropdown"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_view_margin"
                android:background="@drawable/button_custom"
                android:text="@string/sign_up__login"
                android:textColor="@color/back_color"
                android:textStyle="bold" />

            <android.support.v4.widget.ContentLoadingProgressBar
                android:layout_width="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_view_margin"
                android:text="@string/login_forgot_password"
                android:textColor="@color/primary_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_view_margin"
                android:text="@string/login_no_account"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/text_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up_button"
                android:textColor="@color/accent" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

