<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_name">

        </TextView>

        <EditText
            android:id="@+id/edit_text_signup_username"
            android:maxLines="1"
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_name">

        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/divider" />

        <TextView
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_email">

        </TextView>


        <EditText
            android:id="@+id/edit_text_signup_email"
            android:maxLines="1"
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_email">

        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/divider" />

        <TextView
            android:layout_margin="@dimen/edit_text_margin"
            android:text="@string/sign_up_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:id="@+id/edit_text_signup_password"
            android:maxLines="1"
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password">

        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/divider" />

        <TextView
            android:layout_margin="@dimen/edit_text_margin"
            android:text="@string/sign_up_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:id="@+id/edit_text_signup_password_again"
            android:maxLines="1"
            android:layout_margin="@dimen/edit_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password_again">

        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/divider" />

        <Button
            android:id="@+id/button_signup"
            android:textStyle="bold"
            android:layout_margin="@dimen/text_view_margin"
            android:textColor="@color/back_color"
            android:layout_gravity="center"
            android:background="@drawable/button_custom"
            android:text="@string/sign_up_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/divider" />

        <TextView
            android:layout_margin="@dimen/text_view_margin"
            android:layout_gravity="center"
            android:text="@string/sign_up__account_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_login"
            android:textColor="@color/accent"
            android:layout_gravity="center"
            android:text="@string/sign_up__login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>