<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bharbie.akuafo.Activities.PostTrucksActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/post_trucks_toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="250dp"
                android:layout_height="250dp" />

            <TextView
                android:layout_margin="@dimen/edit_text_margin"
                android:textColor="@color/secondary_text"
                android:text="@string/post_trucks_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="@dimen/edit_text_margin"
                android:hint="@string/post_trucks_model_hint"
                android:id="@+id/post_trucks_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <TextView
                android:layout_margin="@dimen/edit_text_margin"
                android:textColor="@color/secondary_text"
                android:text="@string/post_trucks_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_truck_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin"
                android:spinnerMode="dropdown"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <TextView
                android:layout_margin="@dimen/edit_text_margin"
                android:textColor="@color/secondary_text"
                android:text="@string/post_trucks_reg_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="@dimen/edit_text_margin"
                android:hint="@string/post_trucks_reg_no_hint"
                android:id="@+id/post_trucks_reg_no"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@color/divider" />

            <Button
                android:id="@+id/button_post_truck"
                android:textStyle="bold"
                android:textColor="@color/back_color"
                android:text="@string/post_trucks_button"
                android:layout_gravity="end"
                android:layout_margin="@dimen/text_view_margin"
                android:background="@drawable/button_custom"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
