<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/list_view_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height">

        <ImageView
            android:id="@+id/list_view_trucks_image"
            android:scaleType="centerCrop"
            android:padding="@dimen/list_view_padding"
            android:src="@drawable/ic_profile"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:padding="@dimen/list_view_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/list_view_trucks_sender"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:id="@+id/list_item_trucks_sender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1" />


            <TextView
                android:textColor="@color/secondary_text"
                android:text="@string/list_view_trucks_size"
                android:id="@+id/list_view_trucks_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:text="@string/list_view_trucks_model"
                android:textColor="@color/secondary_text"
                android:id="@+id/list_view_trucks_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/list_view_trucks_date"
                android:id="@+id/list_view_trucks_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>